2008-06-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkGC.xs
	* t/GtkGC.t: Automatically handle releasing of GCs returned by
	Gtk2::GC->get.  Patch by muppet, idea and initial implementation
	by Kevin Ryde.

	* xs/GdkEvent.xs (gtk2perl_gdk_event_set_state)
	(gtk2perl_gdk_event_set_time): Handle the new GDK_DAMAGE type.

	* t/GdkEvent.t: Provide Gtk2::Gdk::Event::GrabBroken::implicit and
	grab_window accessors.  Patch by Kevin Ryde.

	* xs/GtkAdjustment.xs: Improve the documentation for the
	accessors.  Patch by Kevin Ryde.

2008-05-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkRecentChooser.t
	* t/GtkRecentManager.t: Fix test failures due to the asynchronous
	nature of the manager's add_item().

2008-05-23  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkTreeModelFilter.t
	* xs/GtkTreeModelFilter.xs: Fix the marshalling of modify
	callbacks.  Technically, this is an API change since an input
	argument turned into a return value.  The previous version was not
	usable, however, so nothing should be affected by this.  If this
	change does break your code, please let us know.  Patch by Kevin
	Ryde.

2008-05-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* t/GdkProperty.t
	* xs/GdkProperty.xs: Overload '!=' for GdkAtoms.  Patch by Kevin
	Ryde.

2008-05-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GdkWindow.xs: Add documentation for Gtk2::Gdk::Window::new.
	Patch by Kevin Ryde.

	* t/GdkWindow.t
	* xs/GdkWindow.xs (SvGdkWindowAttrReal): Use sv_2bool instead of
	SvUV to convert override_redirect values.

	* t/GtkTreeModelIface.t
	* xs/GtkTreeModel.xs (gtk2perl_tree_model_iter_has_child): Accept
	all the usual boolean values for the return value of
	ITER_HAS_CHILD.

	* t/PangoLayout.t: Fix test failure on newer pango versions.

2008-05-04  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkTreeView.xs: Describe the return values of
	get_visible_range and get_tooltip_context.  Patch by Kevin Ryde.
